fixes images ration on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -423,10 +423,12 @@ section {
   }
 
   &[data-type="blog"] {
+    border-radius: var(--border-radius);
+    align-items: center;
     margin-bottom: calc( var(--pad-2) * 2.5 );
+    gap: var(--pad);
 
     @media screen and (min-width: map.get($breakpoints, "media-md")) {
-      align-items: center;
       display: flex;
     }
 
@@ -434,28 +436,33 @@ section {
       margin: 0;
     }
 
-    p {
-      margin-bottom: var(--pad);
+    > a {
+      display: inline-block;
     }
 
     > a [data-type="thumbnail"] {
-      height: calc(var(--pad-2) * 3);
-      width: calc(var(--pad-2) * 4);
-      margin-right: var(--pad);
+      height: auto;
+      margin-bottom: var(--pad);
+      width: 100%;
+      aspect-ratio: 3/2;
 
-      @media screen and (min-width: map.get($breakpoints, "media-sm")) {
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: center;
-        }
+      @media screen and (min-width: map.get($breakpoints, "media-md")) {
+        width: calc(var(--pad-2) * 4);
+        height: calc(var(--pad-2) * 3);
       }
     }
 
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     > div:not([data-type="thumbnail"]) {
-      padding-left: var(--pad);
+
+      @media screen and (min-width: map.get($breakpoints, "media-md")) {
+        padding: var(--pad);
+      }
     }
 
     h2 {
@@ -636,7 +643,7 @@ section {
     margin-bottom: calc( var(--pad-2) * 2.5 );
     gap: var(--pad);
 
-    @media screen and (min-width: map.get($breakpoints, "media-sm")) {
+    @media screen and (min-width: map.get($breakpoints, "media-md")) {
       display: flex;
     }
 
@@ -644,76 +651,39 @@ section {
       margin: 0;
     }
 
+    > a {
+      display: inline-block;
+    }
+
     > a [data-type="thumbnail"] {
-      height: calc(var(--pad-3) * 3);
-      width: calc(var(--pad-3) * 3);
+      height: auto;
+      width: 100%;
+      margin-bottom: var(--pad);
+      aspect-ratio: 3/2;
 
-      @media screen and (min-width: map.get($breakpoints, "media-sm")) {
-        // height: auto;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
+      @media screen and (min-width: map.get($breakpoints, "media-md")) {
+        aspect-ratio: 1/1;
+        height: calc(var(--pad-3) * 3);
+        width: calc(var(--pad-3) * 3);
       }
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     > div:not([data-type="thumbnail"]) {
-      padding: var(--pad);
 
-      @media screen and (min-width: map.get($breakpoints, "media-sm")) {
+      @media screen and (min-width: map.get($breakpoints, "media-md")) {
+        padding: var(--pad);
         flex: 0 0 50%;
-      }
-    }
-
-    nav {
-      font-size: 80%;
-      margin: var(--pad) 0;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      $i: 0;
-
-      @each $color, $value in $colors {
-        $i: $i + 1;
-        ul li:nth-child(#{$i}) span::before {
-          background-color: var(#{$value});
-        }
-      }
-
-      ul li span {
-        display: inline-block;
-        padding-left: calc(var(--pad) * 1.5);
-        color: var(--gray);
-        font-style: italic;
-        vertical-align: top;
-        position: relative;
-
-        &::before {
-          border-radius: 100%;
-          content: '';
-          height: 0.75rem;
-          width: 0.75rem;
-          background-color: var(--lightest-gray);
-          position: absolute;
-          transform: translateY(-50%);
-          top: calc(50% + 1px);
-          left: 0;
-        }
       }
     }
 
     p {
       margin-bottom: 0;
-    }
-
-    [data-type="related"] {
-
-      font-size: 90%;
-      display: inline-block;
     }
 
     h2 {
